@startuml
!define primary_key(x) <b><color:#b8861b><&key></color> x</b>
!define foreign_key(x) <color:#aaaaaa><&key></color> x
!define column(x) <color:#efefef><&media-record></color> x
!define table(x) entity x << (T, white) >>
!define combined_table(x) entity x << (T, #ffffe0) >>
!define list_table(x) entity x << (T, #e0ffff) >>
!define primary_id(x) <color:#ff7070><&key></color> x
'many to many primary key composed of two keys
!define many_to_many(x, y) <color:#0000e0><&key></color> x,y

table(Users) {
    primary_id(id) : VARCHAR 32
    column(username) : VARCHAR 20
    column(email) : VARCHAR 50
    column(password) : VARCHAR 64
    column(content_filter) : BOOLEAN
    foreign_key(roles_id) : REFERENCES Roles(id)
}

combined_table(UsersMedias) {
    many_to_many(users_id,medias_id)
    foreign_key(users_id) : REFERENCES Users(id)
    foreign_key(medias_id) : REFERENCES Medias(id)
    column(users_rating) : INTEGER
    column(completion) : VARCHAR 20
}

table(Medias) {
    primary_id(id) : INTEGER
    column(imdb_id) : VARCHAR 9
    column(title) : VARCHAR 100
    column(year) : VARCHAR 4
    column(genre) : VARCHAR 50
    column(director) : VARCHAR 50
    column(actors) : VARCHAR 50
    column(plot) : VARCHAR 1000
    column(visible) : BOOLEAN
    column(available) : BOOLEAN
    column(media_location) : VARCHAR 255
}

table(Ratings){
    primary_id(id) : INTEGER
    column(rating) : INTEGER
    column(rating_count) : INTEGER
    foreign_key(medias_id) : REFERENCES Medias(id)
}

Medias ||-r-o{ Ratings
UsersMedias }|--|| Medias
UsersMedias }|-l-|| Users

table(Stats) {
    primary_id(id) : INTEGER
    column(completion_time): INTEGER
}

combined_table(MediasStats) {
    many_to_many(media_id,stats_id)
    foreign_key(media_id) : REFERENCES Medias(id)
    foreign_key(stats_id) : REFERENCES Stats(id)
}

MediasStats }|-r-|| Medias
MediasStats }|-l-|| Stats

table(Icons) {
    primary_id(id) : INTEGER
    column(icon) : INTEGER
    column(variant) : INTEGER
    foreign_key(users_id) : REFERENCES Users(id)
}

Users ||-u-|| Icons

list_table(Roles) {
    primary_id(id) : INTEGER
    column(name) : VARCHAR 20
}

Users }o-u-|| Roles

list_table(Watchlist) {
    primary_id(id) : INTEGER
    column(type) : VARCHAR 20
    foreign_key(users_id) : REFERENCES Users(id)
}

list_table(WatchlistMediasStats) {
    many_to_many(watchlist_id,medias_stats_id)
    foreign_key(watchlist_id) : REFERENCES Watchlist(id)
    foreign_key(medias_stats_id) : REFERENCES MediasStats(id)
}

list_table(Tags){
    primary_id(id) : INTEGER
    primary_key(watchlist_id) : INTEGER
    column(name) : VARCHAR 20
}

list_table(WatchlistTags) {
    many_to_many(watchlist_id,tags_id)
    foreign_key(watchlist_id) : REFERENCES Watchlist(id)
    foreign_key(tags_id) : REFERENCES Tags(id)
}

Users ||-d-|| Watchlist

Watchlist ||-u-o{ WatchlistTags
WatchlistTags }|--|| Tags


Watchlist ||-d-o{ WatchlistMediasStats
WatchlistMediasStats }|--|| MediasStats

@enduml